finished the final project!

--- a/index.html
+++ b/index.html
@@ -4,20 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scales</title>
+    <title>Coding The News</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
         body {
-            font-family: sans-serif;
+            font-family: Helvetica;
+            /* padding: 30px; */
         }
-        svg {
+        /* svg {
             border: 1px solid black;
-        }
+        
+        } */
     </style>
 </head>
 <body>
-    <h1>Scales</h1>
+    <h1>Construction Employment Data</h1>
+    <style> 
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    </style>
+    <h2> This chart shows the employment trends in the construction sector from January 2019 to April 2023.</h2>
+    <style>
+    body {
+        font-size: small;
+        font-family: Helvetica;
+    } 
+    
+    </style>
     <div id="dataviz"></div>
     <script src="script.js"></script>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+    </style>
 </body>
 </html>
